# ReMedi2

./: .gitignore  BackgroundSubtractor còpia.cpp  BackgroundSubtractor còpia.h  BackgroundSubtractor.cpp  BackgroundSubtractor.h  BackgroundSubtractor2.cpp  BackgroundSubtractor2.h  CMakeLists.txt  Cloudject.hpp  Cloudject.old.hpp  CloudjectModel.changed.hpp  CloudjectModel.hpp  CloudjectModel.old.hpp  ColorDepthFrame.cpp  ColorDepthFrame.h  DepthFrame.cpp  DepthFrame.h  DetectionOutput.cpp  DetectionOutput.h  Frame.h  InteractiveRegisterer.cpp  InteractiveRegisterer.h  KinectReader.cpp  KinectReader.h  Monitorizer.cpp  Monitorizer.h  ObjectDetector  ObjectDetector.cpp  ObjectDetector.h  ObjectModel.hpp  ObjectRecognizer.cpp  ObjectRecognizer.h  Remedi.cpp  Remedi.h  Sequence.cpp  Sequence.h  TableModeler.cpp  TableModeler.h  algxtended.cpp  algxtended.h  (+16 more)
Results/: sgmt_validation.yml
Results/rcgn_intermediate_results/: rcgn_scores_m3_0to3.yml  rcgn_scores_m3_10to13.yml  rcgn_scores_m3_14to15.yml  rcgn_scores_m3_16.yml  rcgn_scores_m3_17.yml  rcgn_scores_m3_18.yml  rcgn_scores_m3_19to20.yml  rcgn_scores_m3_23to25.yml  rcgn_scores_m3_26.yml  rcgn_scores_m3_27to30.yml  rcgn_scores_m3_4.yml  rcgn_scores_m3_5to9.yml
Results/rcgn_results/: rcgn_scores_m3_21to22.yml
Results/sgmt_intermediate_results/: sgmt-c_validation_0-1-2-3.yml  sgmt-c_validation_12-13-14-15.yml  sgmt-c_validation_20-21-22-23.yml  sgmt-c_validation_4-5-6-7.yml  sgmt-c_validation_8-9-10-11.yml
Results/sgmt_results/: sgmt-c_validation_16-17-18-19.yml  sgmt-c_validation_24-25-26-27.yml  (+1 more)
